// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiService getAssets (mainnet) gets the correct assets for testnets (Bitcoin) 1`] = `
[
  {
    "chain": "Bitcoin",
    "contractAddress": "0xbitcoin",
    "decimals": 8,
    "id": "BTC",
    "isMainnet": true,
    "name": "bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getAssets (mainnet) gets the correct assets for testnets (Ethereum) 1`] = `
[
  {
    "chain": "Ethereum",
    "contractAddress": "0xeth",
    "decimals": 18,
    "id": "ETH",
    "isMainnet": true,
    "name": "ether",
    "symbol": "ETH",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xusdc",
    "decimals": 6,
    "id": "USDC",
    "isMainnet": true,
    "name": "usdc",
    "symbol": "USDC",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xflip",
    "decimals": 18,
    "id": "FLIP",
    "isMainnet": true,
    "name": "flip",
    "symbol": "FLIP",
  },
]
`;

exports[`ApiService getAssets (mainnet) gets the correct assets for testnets (Polkadot) 1`] = `
[
  {
    "chain": "Polkadot",
    "contractAddress": "0xdot",
    "decimals": 10,
    "id": "DOT",
    "isMainnet": true,
    "name": "dot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getAssets (partnernet) gets the correct assets for testnets (Bitcoin) 1`] = `
[
  {
    "chain": "Bitcoin",
    "contractAddress": "0xbitcoin",
    "decimals": 8,
    "id": "BTC",
    "isMainnet": false,
    "name": "bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getAssets (partnernet) gets the correct assets for testnets (Ethereum) 1`] = `
[
  {
    "chain": "Ethereum",
    "contractAddress": "0xeth",
    "decimals": 18,
    "id": "ETH",
    "isMainnet": false,
    "name": "ether",
    "symbol": "ETH",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xusdc",
    "decimals": 6,
    "id": "USDC",
    "isMainnet": false,
    "name": "usdc",
    "symbol": "USDC",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xflip",
    "decimals": 18,
    "id": "FLIP",
    "isMainnet": false,
    "name": "flip",
    "symbol": "FLIP",
  },
]
`;

exports[`ApiService getAssets (partnernet) gets the correct assets for testnets (Polkadot) 1`] = `
[
  {
    "chain": "Polkadot",
    "contractAddress": "0xdot",
    "decimals": 10,
    "id": "DOT",
    "isMainnet": false,
    "name": "dot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getAssets (perseverance) gets the correct assets for testnets (Bitcoin) 1`] = `
[
  {
    "chain": "Bitcoin",
    "contractAddress": "0xbitcoin",
    "decimals": 8,
    "id": "BTC",
    "isMainnet": false,
    "name": "bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getAssets (perseverance) gets the correct assets for testnets (Ethereum) 1`] = `
[
  {
    "chain": "Ethereum",
    "contractAddress": "0xeth",
    "decimals": 18,
    "id": "ETH",
    "isMainnet": false,
    "name": "ether",
    "symbol": "ETH",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xusdc",
    "decimals": 6,
    "id": "USDC",
    "isMainnet": false,
    "name": "usdc",
    "symbol": "USDC",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xflip",
    "decimals": 18,
    "id": "FLIP",
    "isMainnet": false,
    "name": "flip",
    "symbol": "FLIP",
  },
]
`;

exports[`ApiService getAssets (perseverance) gets the correct assets for testnets (Polkadot) 1`] = `
[
  {
    "chain": "Polkadot",
    "contractAddress": "0xdot",
    "decimals": 10,
    "id": "DOT",
    "isMainnet": false,
    "name": "dot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getAssets (sisyphos) gets the correct assets for testnets (Bitcoin) 1`] = `
[
  {
    "chain": "Bitcoin",
    "contractAddress": "0xbitcoin",
    "decimals": 8,
    "id": "BTC",
    "isMainnet": false,
    "name": "bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getAssets (sisyphos) gets the correct assets for testnets (Ethereum) 1`] = `
[
  {
    "chain": "Ethereum",
    "contractAddress": "0xeth",
    "decimals": 18,
    "id": "ETH",
    "isMainnet": false,
    "name": "ether",
    "symbol": "ETH",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xusdc",
    "decimals": 6,
    "id": "USDC",
    "isMainnet": false,
    "name": "usdc",
    "symbol": "USDC",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xflip",
    "decimals": 18,
    "id": "FLIP",
    "isMainnet": false,
    "name": "flip",
    "symbol": "FLIP",
  },
]
`;

exports[`ApiService getAssets (sisyphos) gets the correct assets for testnets (Polkadot) 1`] = `
[
  {
    "chain": "Polkadot",
    "contractAddress": "0xdot",
    "decimals": 10,
    "id": "DOT",
    "isMainnet": false,
    "name": "dot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getAssets gets the correct assets for mainnets (Bitcoin) 1`] = `
[
  {
    "chain": "Bitcoin",
    "contractAddress": "0xbitcoin",
    "decimals": 8,
    "id": "BTC",
    "isMainnet": true,
    "name": "bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getAssets gets the correct assets for mainnets (Ethereum) 1`] = `
[
  {
    "chain": "Ethereum",
    "contractAddress": "0xeth",
    "decimals": 18,
    "id": "ETH",
    "isMainnet": true,
    "name": "ether",
    "symbol": "ETH",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xusdc",
    "decimals": 6,
    "id": "USDC",
    "isMainnet": true,
    "name": "usdc",
    "symbol": "USDC",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0xflip",
    "decimals": 18,
    "id": "FLIP",
    "isMainnet": true,
    "name": "flip",
    "symbol": "FLIP",
  },
]
`;

exports[`ApiService getAssets gets the correct assets for mainnets (Polkadot) 1`] = `
[
  {
    "chain": "Polkadot",
    "contractAddress": "0xdot",
    "decimals": 10,
    "id": "DOT",
    "isMainnet": true,
    "name": "dot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getChains gets mainnet chains 1`] = `
[
  {
    "id": "Ethereum",
    "isMainnet": true,
    "name": "Ethereum",
  },
  {
    "id": "Polkadot",
    "isMainnet": true,
    "name": "Polkadot",
  },
  {
    "id": "Bitcoin",
    "isMainnet": true,
    "name": "Bitcoin",
  },
]
`;

exports[`ApiService getChains gets testnet chains (perseverance) 1`] = `
[
  {
    "id": "Ethereum",
    "isMainnet": false,
    "name": "Ethereum",
  },
  {
    "id": "Polkadot",
    "isMainnet": false,
    "name": "Polkadot",
  },
  {
    "id": "Bitcoin",
    "isMainnet": false,
    "name": "Bitcoin",
  },
]
`;

exports[`ApiService getChains gets testnet chains (sisyphos) 1`] = `
[
  {
    "id": "Ethereum",
    "isMainnet": false,
    "name": "Ethereum",
  },
  {
    "id": "Polkadot",
    "isMainnet": false,
    "name": "Polkadot",
  },
  {
    "id": "Bitcoin",
    "isMainnet": false,
    "name": "Bitcoin",
  },
]
`;

exports[`ApiService getQuote gets a route with a quote 1`] = `
{
  "amount": "10000",
  "destAsset": "ETH",
  "destChain": "Ethereum",
  "quote": {
    "egressAmount": "2",
    "id": "string",
    "intermediateAmount": "1",
  },
  "srcAsset": "BTC",
  "srcChain": "Bitcoin",
}
`;

exports[`ApiService getQuote gets a route with a quote 2`] = `
[
  "https://swapperoo.org/quote?amount=10000&srcAsset=BTC&destAsset=ETH",
  {
    "signal": undefined,
  },
]
`;
